Add google font

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,7 +1,13 @@
 body {
-  background-color: #EEE;
+  background-color: #eee;
+  font-family: Roboto Condensed, sans-serif;
 
   h1 {
     color: #244751;
+    font-family: Roboto Condensed, sans-serif;
   }
+}
+
+#navbar {
+  font-family: Raleway, sans-serif;
 }
