redirecting the css files and scss files

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,13 +1,9 @@
 body {
   background-color: #eee;
-  font-family: Roboto Condensed, sans-serif;
-
-  h1 {
-    color: #244751;
-    font-family: Roboto Condensed, sans-serif;
-  }
+  font-family: Raleway, sans-serif;
 }
 
-#navbar {
+body h1 {
+  color: #244751;
   font-family: Raleway, sans-serif;
 }
