streamlining css and scss files

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -1,9 +1,8 @@
 body {
   background-color: #eee;
   font-family: Raleway, sans-serif;
-}
-
-body h1 {
-  color: #244751;
-  font-family: Raleway, sans-serif;
+  h1 {
+    color: #244751;
+    font-family: Raleway, sans-serif;
+  }
 }
