--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -6,3 +6,11 @@ body {
     font-family: Raleway, sans-serif;
   }
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  border: 1px dashed green;
+}
