--- a/styles/_question.scss
+++ b/styles/_question.scss
@@ -47,10 +47,11 @@
 }
 
 
-.choiceOption {
+.choiceOption  {
     border: transparent;
     background-color: transparent;
     border-bottom: 1px solid;
+    outline: none
 }
 
 
