additional adjustment to routes

--- a/views/final.ejs
+++ b/views/final.ejs
@@ -59,7 +59,7 @@
 <section> TOTAL SCORE </section>
     <ul>
     <% ['hi', 'hello', 'yo', 'salut'].forEach(function(choice, index, arr){ %>
-    <li><%= choice.name_choice %> <span><%= arr.length - index %></span> </li>
+    <li><%= choices.name_choice %> <span><%= arr.length - index %></span> </li>
    <% }) %>
    </ul>
 </main>
